Aprendiendo a configurar rutas

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,8 @@
 <h1>Hello Daniel</h1>
 <h2>Bienvenido a Angular</h2>
 
-<app-landing></app-landing>
+<h3>La cabecera que ponemos aquí es para toda la webapp</h3>
+
+<router-outlet></router-outlet>
+
+<h3>Y el pie también se ve en toda la webapp</h3>
