--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -11,7 +11,7 @@
 
 <!-- <a href="saludoenrutado">Ir al componente saludo enrutado a que me salude</a><br> (NO FUNCIONA PORQUE NO TIENE EL PARÁMETRO) -->
 
-<h3>¡Ojo! Hay 2 tipos de enlace:</h3>
+<h3>¡Ojo! Hay 5 tipos de enlace:</h3>
 
 <ul>
     <li>
@@ -32,3 +32,7 @@
 </ul>
 
 <hr>
+
+<h3>RxJs</h3>
+
+<a [href]="['/rx']">Ir a la página de ejemplos de RxJs</a>
