Repasar comunicación padre-hijo.

--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -36,3 +36,9 @@
 <h3>RxJs</h3>
 
 <a [href]="['/rx']">Ir a la página de ejemplos de RxJs</a>
+
+<hr>
+
+<h3>Componente Padre e Hijo</h3>
+
+<a [routerLink]="['/padre']">Ir al componente Padre</a>
