--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -42,3 +42,17 @@
 <h3>Componente Padre e Hijo</h3>
 
 <a [routerLink]="['/padre']">Ir al componente Padre</a>
+
+<hr>
+
+<h3>Obteniendo un número aleatorio de un servicio inyectable</h3>
+
+<button (click)="obtenerNumeroAleatorio()">Obtener número aleatorio entre 1 y 100 desde el servicio aleatorio</button>
+
+<h2>El número aleatorio obtenido es: {{ numeroAleatorio }}</h2>
+
+<hr>
+
+<h3>Componente no enrutado aleatorio que gasta el servicio aleatorio</h3>
+
+<app-aleatorio></app-aleatorio>
