--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,8 +1,17 @@
-<h1>Hello Daniel</h1>
-<h2>Bienvenido a Angular</h2>
+<div class="container mt-4">
+    <div class="row mb-4">
+        <div class="col">
+            <div class="card p4 bg-light mb-4">
+                <h1>Hello Daniel</h1>
+                <h2>Bienvenido a Angular</h2>
 
-<h3>La cabecera que ponemos aquí es para toda la webapp</h3>
+                <h3>La cabecera que ponemos aquí es para toda la webapp</h3>
 
-<router-outlet></router-outlet>
-
-<h3>Y el pie también se ve en toda la webapp</h3>
+                <router-outlet></router-outlet>
+            </div>
+        </div>
+    </div>
+    <div class="row mt-4" style="text-align: center;">
+        <h3>Y el pie también se ve en toda la webapp</h3>
+    </div>
+</div>
