--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,5 @@
 <div class="container mt-4">
+    <app-menu></app-menu>
     <div class="row mb-4">
         <div class="col">
             <div class="card p4 bg-light mb-4">
