Repasar todo lo que hemos visto hoy para hacer un ejercicio similar.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
+<app-menu></app-menu>
 <div class="container mt-4">
-    <app-menu></app-menu>
     <div class="row mb-4">
         <div class="col">
             <div class="card p4 bg-light mb-4">
@@ -13,6 +13,7 @@
         </div>
     </div>
     <div class="row mt-4" style="text-align: center;">
-        <h3>Y el pie también se ve en toda la webapp</h3>
+        <h2>Este es el pie de la página</h2>
+        <h3>...Y el pie también se ve en toda la webapp</h3>
     </div>
 </div>
