--- a/src/app/components/menu/menu.html
+++ b/src/app/components/menu/menu.html
@@ -24,6 +24,9 @@
         <li class="nav-item">
           <a class="nav-link" [class.active]="activeRoute === '/post'" aria-current="page" href="post">Blog</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" [class.active]="activeRoute === '/usuario'" aria-current="page" href="usuario">Usuario</a>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Ejercicios
@@ -34,6 +37,7 @@
             <li><a class="dropdown-item" href="saludoenrutado" [class.active]="activeRoute === '/saludoenrutado'">Saludo Enrutado</a></li>
             <li><a class="dropdown-item" href="rx" [class.active]="activeRoute === '/rx'">RxJs</a></li>
             <li><a class="dropdown-item" href="post" [class.active]="activeRoute === '/post'">Blog</a></li>
+            <li><a class="dropdown-item" href="usuario" [class.active]="activeRoute === '/usuario'">Usuario</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="/" [class.active]="activeRoute === '/' || activeRoute === '/home'">Home</a></li>
           </ul>
