Arreglar parte usuario

--- a/src/app/components/usuario/usuario.html
+++ b/src/app/components/usuario/usuario.html
@@ -4,6 +4,6 @@
     <div>
         <h5>{{ item.email }} ({{ item.username }})</h5>
         <p>Empresa: {{ item.company.name }}</p>
-        <button (click)="verDatosUsuario()">Ver datos de Usuario</button>
+        <button (click)="verDatosUsuario(item)">Ver datos de Usuario</button>
     </div>
 }
