--- a/src/app/components/usuario/usuario.html
+++ b/src/app/components/usuario/usuario.html
@@ -5,5 +5,8 @@
         <h5>{{ item.email }} ({{ item.username }})</h5>
         <p>Empresa: {{ item.company.name }}</p>
         <button (click)="verDatosUsuario(item)">Ver datos de Usuario</button>
+        
+        <!-- AÑADIR UN BOTÓN -->
+        
     </div>
 }
