Repasar lo último que hemos hecho para el tercer reto.

--- a/src/app/components/datos-unrouted/datos-unrouted.html
+++ b/src/app/components/datos-unrouted/datos-unrouted.html
@@ -24,7 +24,7 @@
                 </tr>
                 <tr>
                     <th>Empresa</th>
-                    <td>{{ oUsuario.company }}</td>
+                    <td>{{ oUsuario.company.name }}</td>
                 </tr>
             </table>
         </div>
