--- a/src/app/components/datos2-unrouted/datos2-unrouted.html
+++ b/src/app/components/datos2-unrouted/datos2-unrouted.html
@@ -1,36 +1,40 @@
-<!--
-
-<div class="container">
+<div class="container mt-5">
     <div class="row">
         <div class="col">
             <h2>Datos del Usuario</h2>
 
-            <h5>Aquí se presentarán los datos del usuario</h5>
-
-            <table class="table table-striped">
-                <tr>
-                    <th>Nombre</th>
-                    <td>{{ oUsuario.name }}</td>
-                </tr>
-                <tr>
-                    <th>Username</th>
-                    <td>{{ oUsuario.username }}</td>
-                </tr>
-                <tr>
-                    <th>Email</th>
-                    <td>{{ oUsuario.email }}</td>
-                </tr>
-                <tr>
-                    <th>Ciudad</th>
-                    <td>{{ oUsuario.address.city }}</td>
-                </tr>
-                <tr>
-                    <th>Empresa</th>
-                    <td>{{ oUsuario.company }}</td>
-                </tr>
-            </table>
+            @if (loading) {
+                <div class="text-center">
+                    <p>Cargando datos del usuario...</p>
+                </div>
+            } @else if (oUsuario) {
+                <table class="table table-striped">
+                    <tr>
+                        <th>Nombre</th>
+                        <td>{{ oUsuario.name }}</td>
+                    </tr>
+                    <tr>
+                        <th>Username</th>
+                        <td>{{ oUsuario.username }}</td>
+                    </tr>
+                    <tr>
+                        <th>Email</th>
+                        <td>{{ oUsuario.email }}</td>
+                    </tr>
+                    <tr>
+                        <th>Ciudad</th>
+                        <td>{{ oUsuario.address.city }}</td>
+                    </tr>
+                    <tr>
+                        <th>Empresa</th>
+                        <td>{{ oUsuario.company.name }}</td>
+                    </tr>
+                </table>
+            } @else {
+                <div class="text-center">
+                    <p>Error al cargar los datos del usuario</p>
+                </div>
+            }
         </div>
     </div>
 </div>
-
--->
